--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -58,6 +58,7 @@ $font-size-xsmall: ceil($font-size-base * 0.7);
 
 $font-family-roboto: 'Roboto', 'Verdana', sans-serif;
 $font-family-roboto-mono: 'Roboto Mono', monospace;
+$font-family-dyslexica: 'OpenDyslexic-Regular', Helvetica, Arial, sans-serif;
 
 // Flag in LanguageDropdown and MainLanguageButton
 $flag-width: 30px;
