--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,2 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic,500,500italic,700,700italic,900,900italic);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Mono:100,100italic,300,300italic,400,400italic,500,500italic,700,700italic);
+
+@font-face {
+  font-family: OpenDyslexic-Regular;
+  src: url(../assets/fonts/OpenDyslexic-Regular.ttf);
+}
