removed roboto font and only use dyslexic font

--- a/src/pages/App.scss
+++ b/src/pages/App.scss
@@ -1,3 +1,6 @@
+@import '../styles/variables';
+
 .appContainer {
   overflow-x: hidden; // Prevents page to scroll horizontally on e.g. phones if content goes outside width
+  font-family: 'OpenDyslexic-Regular';
 }
