font for code in content and popovers

--- a/src/components/PopoverComponent.scss
+++ b/src/components/PopoverComponent.scss
@@ -21,6 +21,7 @@
 .content {
   display: flex;
   justify-content: space-between;
+  font-family: 'OpenDyslexic-Regular';
   img {
     margin-right: 15px;
   }
