Add top-margin to buttons in buttonrow directly, and move code to common mixins.

--- a/src/components/InstructionButton.scss
+++ b/src/components/InstructionButton.scss
@@ -1,11 +1,7 @@
-@import '../styles/variables';
+@import 'LessonPage/ButtonRow';
 
 .button {
-  margin: 0 10px 0 0;
-
-  @media print {
-    display: none;
-  }
+  @include buttonContainer();
 }
 
 .buttonOnlyIcon {
@@ -13,11 +9,7 @@
 }
 
 .textMargin {
-  margin-left: 10px;
-
-  @media (max-width: $screen-xs-max) {
-    display: none;
-  }
+  @include textMargin();
 }
 
 .icon {
