fixed for tooltip, removed from code tag. Only footer fix left

--- a/src/components/PopoverComponent.scss
+++ b/src/components/PopoverComponent.scss
@@ -18,11 +18,19 @@
   }
 }
 
-.content {
+@mixin content {
   display: flex;
   justify-content: space-between;
-  font-family: 'OpenDyslexic-Regular';
   img {
     margin-right: 15px;
   }
+}
+
+.content {
+  @include content;
+}
+
+.dyslexia {
+  @include content;
+  font-family: $font-family-dyslexic;
 }
