--- a/src/html-template.ejs
+++ b/src/html-template.ejs
@@ -9,6 +9,8 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+  <%- faviconHtml %>
+
   <% cssAssets.forEach(function(file){ %>
   <link href="<%- file -%>" rel="stylesheet">
   <% }); %>
