--- a/src/html-template.ejs
+++ b/src/html-template.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html <%- helmet.htmlAttributes.toString() %>>
 <head>
   <script>
     if (window.location.hostname !== 'localhost' && window.location.protocol === 'http:') {
@@ -8,6 +8,9 @@
   </script>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+  <%- helmet.title.toString() %>
+  <%- helmet.meta.toString() %>
 
   <%- faviconHtml %>
 
