add cdn for katex css

--- a/src/html-template.ejs
+++ b/src/html-template.ejs
@@ -18,6 +18,8 @@
   <link href="<%- file -%>" rel="stylesheet">
   <% }); %>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.css">
+
   <%- appCss -%>
 </head>
 <body>
