--- a/src/html-template.ejs
+++ b/src/html-template.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html <%- helmet.htmlAttributes.toString() %>>
 <head>
   <script>
     var loc = window.location;
@@ -10,9 +10,10 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-  <%- faviconHtml %>
+  <%- helmet.title.toString() %>
+  <%- helmet.meta.toString() %>
 
-  <title><%- pageTitle -%></title>
+  <%- faviconHtml %>
 
   <% cssAssets.forEach(function(file){ %>
   <link href="<%- file -%>" rel="stylesheet">
