remove the package and use it directly in browser

--- a/src/html-template.ejs
+++ b/src/html-template.ejs
@@ -27,5 +27,10 @@
   <% jsAssets.forEach(function(file){ %>
   <script src="<%- file -%>" async></script>
   <% }); %>
+  <!-- Scratchblocks-->
+  <script src="https://scratchblocks.github.io/js/scratchblocks-v3.1-min.js"></script>
+  <script src="https://scratchblocks.github.io/js/translations-all-v3.1-min.js" charset="utf8"></script>
+  <script>scratchblocks.renderMatching('pre', {languages: ['nb', 'nn', 'en']});</script> <!-- std blocks -->
+  <script>scratchblocks.renderMatching('code.b', {languages: ['nb', 'nn', 'en'], inline: true});</script>  <!-- inline blocks -->
 </body>
 </html>
