--- a/src/components/Navigation/BreadCrumb.scss
+++ b/src/components/Navigation/BreadCrumb.scss
@@ -3,7 +3,7 @@
 .breadcrumb {
   padding-left: 10px;
   float: left;
-  font-size: 30px;
+  font-size: 1.8em;
 }
 
 .homeIcon {
@@ -17,7 +17,7 @@
 }
 
 .crumb {
-  font-size: 20px;
+  font-size: 0.7em;
   vertical-align: middle;
 }
 
