--- a/src/components/FrontPage/TeacherInfobox.scss
+++ b/src/components/FrontPage/TeacherInfobox.scss
@@ -14,7 +14,7 @@
 .center {
   display: flex;
   justify-content: center;
-  font-size: 28px;
+  font-size: 1.8em;
 }
 
 .infoBox {
@@ -24,7 +24,7 @@
   border: 1px solid #b2b2b2;
   border-radius: 10px;
   font-family: $font-family-roboto;
-  font-size: 16px;
+  font-size: 0.6em;
   font-weight: 300;
   position: relative;
   margin-bottom: 30px;
