--- a/src/pages/App.scss
+++ b/src/pages/App.scss
@@ -12,7 +12,7 @@
   font-family: $font-family-standard;
 }
 
-.contentDyslexia {
+.appContainerDyslexia {
   @include container;
   font-family: $font-family-dyslexic;
 }
