--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -56,5 +56,5 @@ $font-size-md-pct: 125%; // 20px if base font is 16px
 $font-size-xlarge: ceil($font-size-base * 1.5);
 $font-size-xsmall: ceil($font-size-base * 0.7);
 
-$font-family-roboto: 'Roboto', 'Verdana', sans-serif;
-$font-family-roboto-mono: 'Roboto Mono', monospace;
+$font-family-standard: Helvetica, Arial, sans-serif;
+$font-family-dyslexic: 'OpenDyslexic-Regular', Helvetica, Arial, sans-serif;
