--- a/src/components/LessonPage/Content.scss
+++ b/src/components/LessonPage/Content.scss
@@ -239,7 +239,9 @@ table {
 }
 
 input[type="checkbox"] {
-  display: none;
+  position: absolute;
+  opacity: 0;
+  margin: 0.4em 0.6em 0 -1.9em;
 }
 
 input[type="checkbox"] + label {
@@ -256,7 +258,6 @@ input[type="checkbox"] + label::before {
   height: 1.3em;
   margin: 0 0.6em 0 -2.2em;
   line-height: 1.1em;
-  text-align: center;
   border: 3px solid $checkbox-blue;
   border-radius: 3px;
 }
