--- a/src/components/Filter/FilterItem.scss
+++ b/src/components/Filter/FilterItem.scss
@@ -1,20 +1,42 @@
 @import '../../styles/variables';
 
+.container {
+  display: flex;
+  justify-content: space-between;
+  margin: 5px 0;
+}
+
 .label {
   text-overflow: ellipsis;
   overflow-x: hidden;
+  font-weight: normal;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.labelText {
+  margin-left: 7px;
 }
 
 .tagInfo {
-  float: right;
-  padding-top: 1px;
-  cursor: pointer;
-
   &:hover {
     color: $color-gray;
   }
+}
 
-  &:active {
-    color: black;
+.popButton {
+  padding-top: 2px;
+  &,
+  &:hover,
+  &:active:focus,
+  &:focus {
+    background: transparent;
+    text-decoration: none;
+    border: none;
   }
+}
+
+.glyph {
+  font-size: 1.1em;
 }
