--- a/src/components/CourseList/CourseItem.scss
+++ b/src/components/CourseList/CourseItem.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables';
+@import '../../styles/mixins';
 
 .courseItem {
   color: $color-gray-dark;
@@ -41,21 +42,14 @@
   margin-left: 5px;
 }
 
-.popButton {
-  margin-bottom: 2px;
-  &,
-  &:hover,
-  &:focus {
-    background: transparent;
-    text-decoration: none;
-    border: none;
-  }
-}
-
 .popoverGlyph {
   margin-top: 3px;
   font-size: 1.4em;
   &:hover {
     color: $color-gray;
   }
+}
+
+.popButton {
+  @include popoverButton;
 }
