--- a/src/components/CoursePage/LessonItem.scss
+++ b/src/components/CoursePage/LessonItem.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables.scss';
-@import '../../styles/mixins.scss';
+@import '../../styles/variables';
+@import '../../styles/mixins';
 
 .row {
   display: flex;
@@ -53,12 +53,5 @@
 }
 
 .popButton {
-  padding: 3px;
-  &,
-  &:hover,
-  &:focus {
-    background: transparent;
-    text-decoration: none;
-    border: none;
-  }
+  @include popoverButton;
 }
