--- a/src/components/Filter/FilterItem.scss
+++ b/src/components/Filter/FilterItem.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables';
+@import '../../styles/mixins';
 
 .container {
   display: flex;
@@ -25,18 +26,10 @@
   }
 }
 
-.popButton {
-  padding-top: 2px;
-  &,
-  &:hover,
-  &:active:focus,
-  &:focus {
-    background: transparent;
-    text-decoration: none;
-    border: none;
-  }
-}
-
 .glyph {
   font-size: 1.1em;
+}
+
+.popButton {
+  @include popoverButton;
 }
