--- a/src/components/CoursePage/PlaylistNavigation.scss
+++ b/src/components/CoursePage/PlaylistNavigation.scss
@@ -9,3 +9,13 @@
 .headerText {
   font-size: 1.75em;
 }
+
+.title {
+  & a {
+    &,
+    &:hover,
+    &:focus {
+      text-decoration: none;
+    }
+  }
+}
