--- a/src/components/CourseList/CourseItem.scss
+++ b/src/components/CourseList/CourseItem.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables';
+@import '../../styles/mixins';
 
 .courseItem {
   color: $color-gray-dark;
@@ -12,14 +13,6 @@
   &:link {
     text-decoration: none;
   }
-
-  @media screen and (min-width: $screen-sm-min) {
-    &:hover {
-      .courseLogo {
-        padding: 0; // Remove padding to make the logo look bigger
-      }
-    }
-  }
 }
 
 .courseLogo {
@@ -27,6 +20,12 @@
   padding: 5px;
   height: 170px;
   margin-bottom: 15px;
+
+  @media screen and (min-width: $screen-sm-min) {
+    &:hover {
+      padding: 0; // Remove padding to make the logo look bigger
+    }
+  }
 }
 
 .courseName {
@@ -44,9 +43,15 @@
 }
 
 .popoverGlyph {
-  margin: 0 3px 0 5px;
-
+  margin-top: 3px;
+  font-size: 1.4em;
   &:hover {
     color: $color-gray;
   }
+}
+
+.popButton {
+  margin-bottom: 3px;
+
+  @include popoverButton;
 }
