--- a/src/components/CoursePage/PlaylistNavigation.scss
+++ b/src/components/CoursePage/PlaylistNavigation.scss
@@ -1,5 +1,20 @@
 .container {
   overflow: hidden; // Avoid margin collapse
+  // Make the whole panel header area clickable
+  :global(.panel-heading) {
+    padding: 0;
+    & a {
+      display: block;
+      padding: 10px 15px;
+      cursor: pointer;
+
+      &:hover,
+      &:focus {
+        text-decoration: none;
+        box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.05);
+      }
+    }
+  }
 }
 
 .link {
