Outline for checkbox and one anchor for github in footer (#588)
* outline for checkbox and one anchor for github in footer

* cr

--- a/src/components/LessonPage/Content.scss
+++ b/src/components/LessonPage/Content.scss
@@ -267,6 +267,7 @@ input[type="checkbox"]:checked + label::before {
   padding-left: 0.1em;
 }
 
+input[type="checkbox"]:active + label::before,
 input[type="checkbox"]:focus + label::before {
   background: darken($checkbox-blue, 20%);
 }
