--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -37,16 +37,16 @@ $color-level3: #d63838;
 $color-level4: $color-gray-dark;
 
 //	Scratch block colors
-$color-scratchblock-motion:     #505fd7;
-$color-scratchblock-looks:      #9b33d9;
-$color-scratchblock-sound:      #d000c2;
-$color-scratchblock-pen:        #00a16f;
-$color-scratchblock-data:       #ff7500;
-$color-scratchblock-events:     #d38117;
-$color-scratchblock-control:    #e9aa00;
-$color-scratchblock-sensing:    #00a3e6;
-$color-scratchblock-operators:  #00c114;
-$color-scratchblock-moreblocks: #71009a;
+$color-scratchblock-motion:     #4C97FF;
+$color-scratchblock-looks:      #9966FF;
+$color-scratchblock-sound:      #CF63CF;
+$color-scratchblock-pen:        #0FBD8C;
+$color-scratchblock-data:       #FF8C1A;
+$color-scratchblock-events:     #FFBF00;
+$color-scratchblock-control:    #FFAB19;
+$color-scratchblock-sensing:    #5CB1D6;
+$color-scratchblock-operators:  #59C059;
+$color-scratchblock-moreblocks: #FF6680;
 
 // Fonts
 $font-size-xs-pct: 106.25%; // 17px if base font is 16px
