--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -37,16 +37,16 @@ $color-level3: #d63838;
 $color-level4: $color-gray-dark;
 
 //	Scratch block colors
-$color-scratchblock-motion:     #4C97FF;
-$color-scratchblock-looks:      #9966FF;
-$color-scratchblock-sound:      #CF63CF;
-$color-scratchblock-pen:        #0FBD8C;
-$color-scratchblock-data:       #FF8C1A;
-$color-scratchblock-events:     #FFBF00;
-$color-scratchblock-control:    #FFAB19;
-$color-scratchblock-sensing:    #5CB1D6;
-$color-scratchblock-operators:  #59C059;
-$color-scratchblock-moreblocks: #FF6680;
+$color-scratchblock-motion:     #4c97ff;
+$color-scratchblock-looks:      #96f;
+$color-scratchblock-sound:      #cf63cf;
+$color-scratchblock-pen:        #0fbd8c;
+$color-scratchblock-data:       #ff8c1a;
+$color-scratchblock-events:     #ffbf00;
+$color-scratchblock-control:    #ffab19;
+$color-scratchblock-sensing:    #5cb1d6;
+$color-scratchblock-operators:  #59c059;
+$color-scratchblock-moreblocks: #ff6680;
 
 // Fonts
 $font-size-xs-pct: 106.25%; // 17px if base font is 16px
