--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -22,6 +22,7 @@ $color-blue-light: #a3cccb;
 $color-blue-median-light: #7bb7b6;
 $color-blue-median: #3a9b94;
 $color-blue-dark: #215651;
+$color-blue-focus: #66a3ea;
 
 $color-orange-median: #eb9114;
 $color-orange-dark: #ff9500;
