--- a/src/html-template.ejs
+++ b/src/html-template.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="manifest" href="manifest.webmanifest">
 
   <%- helmet.title.toString() %>
   <%- helmet.meta.toString() %>
