--- a/src/components/Navigation/DarkModeSwitch.scss
+++ b/src/components/Navigation/DarkModeSwitch.scss
@@ -1,13 +1,10 @@
-@import '../../styles/variables';
-
 .text {
-  font-family: $font-family-dyslexic;
   margin-right: 10px;
+  font-size: 1.2em;
 }
 
 .container {
   display: flex;
   align-content: center;
-  margin-right: 10px;
-  margin-left: 10px;
+  margin: 10px;
 }
