--- a/src/components/Filter/FilterItem.scss
+++ b/src/components/Filter/FilterItem.scss
@@ -2,6 +2,7 @@
 @import '../../styles/mixins';
 
 .container {
+  color: black;
   display: flex;
   justify-content: space-between;
   margin: 5px 0;
