--- a/src/components/CourseList/LessonCount.scss
+++ b/src/components/CourseList/LessonCount.scss
@@ -5,6 +5,11 @@
   text-align: center;
 }
 
+.containerWhite {
+  color: lightgray;
+  text-align: center;
+}
+
 .center {
   display: inline-block;
   width: 100%;
