--- a/src/components/CoursePage/LessonItem.scss
+++ b/src/components/CoursePage/LessonItem.scss
@@ -1,10 +1,20 @@
 @import '../../styles/variables';
 @import '../../styles/mixins';
 
-.row {
+@mixin row {
   display: flex;
   align-items: center;
   position: relative;
+}
+
+.rowStudent {
+  @include row;
+  background-color: $color-green-lighter;
+}
+
+.rowTeacher {
+  @include row;
+  background-color: $color-blue-lighter;
 }
 
 @mixin progressBar($color) {
