--- a/src/components/LessonPage/Content.scss
+++ b/src/components/LessonPage/Content.scss
@@ -177,7 +177,7 @@ section.challenge {
   }
 }
 
-// manual colors for scratch code
+// manual colors for scratch and microbit code
 // example: Press `motion`{.blockmotion} ...
 code {
   &.blockmotion { background-color: #505fd7; }
@@ -191,6 +191,24 @@ code {
   &.blockoperators { background-color: #00c114; }
   &.blockmoreblocks { background-color: #71009a; }
 
+  &.microbitbasic { background-color: #1e90ff; }
+  &.microbitinput { background-color: #d400d4; }
+  &.microbitmusic { background-color: #E63022; }
+  &.microbitled { background-color: #5c2d91; }
+  &.microbitradio { background-color: #e3008c; }
+  &.microbitloops { background-color: #00aa00; }
+  &.microbitlogic { background-color: #00a4a6; }
+  &.microbitvariables { background-color: #dc143c; }
+  &.microbitmath { background-color: #9400d3; }
+  &.microbitfunctions { background-color: #3455db; }
+  &.microbitarrays { background-color: #e65722; }
+  &.microbittext { background-color: #b8860b; }
+  &.microbitgame { background-color: #007a4b; }
+  &.microbitimages { background-color: #7600a8; }
+  &.microbitpins { background-color: #b22222; }
+  &.microbitserial { background-color: #002050; }
+  &.microbitcontrol { background-color: #333333; }
+
   &.blockmotion,
   &.blocklooks,
   &.blocksound,
@@ -200,7 +218,24 @@ code {
   &.blockcontrol,
   &.blocksensing,
   &.blockoperators,
-  &.blockmoreblocks {
+  &.blockmoreblocks,
+  &.microbitbasic,
+  &.microbitinput,
+  &.microbitmusic,
+  &.microbitled,
+  &.microbitradio,
+  &.microbitloops,
+  &.microbitlogic,
+  &.microbitvariables,
+  &.microbitmath,
+  &.microbitfunctions,
+  &.microbitarrays,
+  &.microbittext,
+  &.microbitgame,
+  &.microbitimages,
+  &.microbitpins,
+  &.microbitserial,
+  &.microbitcontrol {
     color: #fff;
   }
 }
