--- a/src/components/LessonPage/Content.scss
+++ b/src/components/LessonPage/Content.scss
@@ -193,10 +193,10 @@ code {
 
   &.microbitbasic { background-color: #1e90ff; }
   &.microbitinput { background-color: #d400d4; }
-  &.microbitmusic { background-color: #E63022; }
+  &.microbitmusic { background-color: #e63022; }
   &.microbitled { background-color: #5c2d91; }
   &.microbitradio { background-color: #e3008c; }
-  &.microbitloops { background-color: #00aa00; }
+  &.microbitloops { background-color: #0a0; }
   &.microbitlogic { background-color: #00a4a6; }
   &.microbitvariables { background-color: #dc143c; }
   &.microbitmath { background-color: #9400d3; }
@@ -207,7 +207,7 @@ code {
   &.microbitimages { background-color: #7600a8; }
   &.microbitpins { background-color: #b22222; }
   &.microbitserial { background-color: #002050; }
-  &.microbitcontrol { background-color: #333333; }
+  &.microbitcontrol { background-color: #333; }
 
   &.blockmotion,
   &.blocklooks,
