Add the favicon tags in the template (#17)

--- a/src/html-template.ejs
+++ b/src/html-template.ejs
@@ -7,6 +7,8 @@
   <%- helmet.title.toString() %>
   <%- helmet.meta.toString() %>
 
+  <%- faviconHtml %>
+
   <% cssAssets.forEach(function(file){ %>
   <link href="<%- file -%>" rel="stylesheet">
   <% }); %>
