--- a/src/components/LessonPage/Content.scss
+++ b/src/components/LessonPage/Content.scss
@@ -180,16 +180,16 @@ section.challenge {
 // manual colors for scratch code
 // example: Press `motion`{.blockmotion} ...
 code {
-  &.blockmotion { background-color: #505fd7; }
-  &.blocklooks { background-color: #9b33d9; }
-  &.blocksound { background-color: #d000c2; }
-  &.blockpen { background-color: #00a16f; }
-  &.blockdata { background-color: #ff7500; }
-  &.blockevents { background-color: #d38117; }
-  &.blockcontrol { background-color: #e9aa00; }
-  &.blocksensing { background-color: #00a3e6; }
-  &.blockoperators { background-color: #00c114; }
-  &.blockmoreblocks { background-color: #71009a; }
+  &.blockmotion { background-color: #4c97ff; }
+  &.blocklooks { background-color: #96f; }
+  &.blocksound { background-color: #cf63cf; }
+  &.blockpen { background-color: #0fbd8c; }
+  &.blockdata { background-color: #ff8c1a; }
+  &.blockevents { background-color: #ffbf00; }
+  &.blockcontrol { background-color: #ffab19; }
+  &.blocksensing { background-color: #5cb1d6; }
+  &.blockoperators { background-color: #59c059; }
+  &.blockmoreblocks { background-color: #ff6680; }
 
   &.blockmotion,
   &.blocklooks,
