start of the dark mode test solution

--- a/src/pages/LessonPage.scss
+++ b/src/pages/LessonPage.scss
@@ -22,3 +22,13 @@
 .license {
   margin: 30px 0;
 }
+
+.darkmode {
+  color: white;
+  background-color: black;
+}
+
+.lightmode {
+  color: black;
+  background-color: white;
+}
