--- a/src/pages/LessonPage.scss
+++ b/src/pages/LessonPage.scss
@@ -3,10 +3,8 @@
 
 .container {
   max-width: 800px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 44px 15px;
+  margin: -44px auto 0;
 
   // responsive images
   & figure > img {
