dark mode everything

--- a/src/components/CourseList/LessonCount.scss
+++ b/src/components/CourseList/LessonCount.scss
@@ -1,7 +1,12 @@
 @import '../../styles/variables';
 
-.container {
+.containerDark {
   color: $color-gray;
+  text-align: center;
+}
+
+.containerWhite {
+  color: lightgray;
   text-align: center;
 }
 
