--- a/src/components/LessonPage/Content.scss
+++ b/src/components/LessonPage/Content.scss
@@ -109,6 +109,7 @@ section.try {
 
 section.protip,
 section.tip {
+  color: black;
   border: 3px solid #ff7f00;
   background: #fff99d;
   border-radius: 12px;
