--- a/src/components/Navigation/DarkModeSwitch.scss
+++ b/src/components/Navigation/DarkModeSwitch.scss
@@ -1,9 +1,7 @@
-@import '../../styles/variables';
-
 .text {
   color: black;
-  font-family: $font-family-dyslexic;
   margin-right: 10px;
+  font-size: 1.1em;
 }
 
 .container {
