--- a/src/components/Navigation/ModeDropdown.scss
+++ b/src/components/Navigation/ModeDropdown.scss
@@ -1,8 +1,28 @@
 @import '../../styles/variables';
 
-.gadgetContainer {
+@mixin gadgetContainer {
   display: inline-block;
   padding: 3px 5px;
+}
+
+.gadgetContainerWhite {
+  @include gadgetContainer;
+}
+
+.gadgetContainerDark {
+  @include gadgetContainer;
+
+  ul {
+    background-color: #222;
+
+    a:hover {
+      background-color: #444;
+    }
+  }
+}
+
+.whiteText {
+  color: white;
 }
 
 .onlyMode {
@@ -11,7 +31,16 @@
   }
 }
 
-.icon {
+@mixin icon {
   margin-top: 2px;
   margin-right: 10px;
+}
+
+.darkIcon {
+  @include icon;
+}
+
+.whiteIcon {
+  @include icon;
+  color: white;
 }
