--- a/src/pages/LessonPage.scss
+++ b/src/pages/LessonPage.scss
@@ -3,8 +3,10 @@
 
 .container {
   max-width: 800px;
-  padding: 44px 15px;
-  margin: -44px auto 0;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 
   // responsive images
   & figure > img {
@@ -19,14 +21,4 @@
 
 .license {
   margin: 30px 0;
-}
-
-.darkmode {
-  color: white;
-  background-color: black;
-}
-
-.lightmode {
-  color: black;
-  background-color: white;
 }
