changed to swap

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
   font-family: OpenDyslexic-Regular;
   src: url(../assets/fonts/OpenDyslexic-Regular.ttf);
-  font-display: block;
+  font-display: swap;
 }
