--- a/src/html-template.ejs
+++ b/src/html-template.ejs
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html <%- helmet.htmlAttributes.toString() %>>
+<html>
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-  <%- helmet.title.toString() %>
-  <%- helmet.meta.toString() %>
 
   <%- faviconHtml %>
 
