--- a/src/components/LessonPage/Content.scss
+++ b/src/components/LessonPage/Content.scss
@@ -21,9 +21,8 @@ $checkbox-blue: #abdbea;
     opacity: 0;
   }
   li {
+    break-inside: avoid;
     list-style: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
     margin-left: 45px;
   }
   li::before {
