solve stylelint error

--- a/src/components/LessonPage/Content.scss
+++ b/src/components/LessonPage/Content.scss
@@ -197,8 +197,9 @@ $checkbox-blue: #abdbea;
     > * {
       padding: 0 20px;
     }
+
     ul {
-      margin: 10px 0px;
+      margin: 10px 0;
     }
   }
 
